// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File upload Props Test If file upload field rendered correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="file-upload"
      >
        <label
          class="file-upload-label"
        >
          file-upload-label
        </label>
        <div
          class="file-upload-field"
        >
          <input
            id="file-upload-input"
            type="file"
          />
          <label
            class="file-upload-value"
            for="file-upload-input"
          >
            Select resume	
          </label>
          <label
            class="file-upload-value-rules"
            for="file-upload-input"
          >
            File type: PDF, Max size: 5 MB
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="file-upload"
    >
      <label
        class="file-upload-label"
      >
        file-upload-label
      </label>
      <div
        class="file-upload-field"
      >
        <input
          id="file-upload-input"
          type="file"
        />
        <label
          class="file-upload-value"
          for="file-upload-input"
        >
          Select resume	
        </label>
        <label
          class="file-upload-value-rules"
          for="file-upload-input"
        >
          File type: PDF, Max size: 5 MB
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`File upload Props Test If file upload field rendered correctly with error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="file-upload"
      >
        <label
          class="file-upload-label"
        >
          file-upload-label
        </label>
        <div
          class="file-upload-field"
        >
          <input
            id="file-upload-input"
            type="file"
          />
          <label
            class="file-upload-value"
            for="file-upload-input"
          >
            Select resume	
          </label>
          <label
            class="file-upload-value-rules"
            for="file-upload-input"
          >
            File type: PDF, Max size: 5 MB
          </label>
        </div>
        <label
          class="file-upload-error"
        >
          Enter valid 
          file-upload-label
        </label>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="file-upload"
    >
      <label
        class="file-upload-label"
      >
        file-upload-label
      </label>
      <div
        class="file-upload-field"
      >
        <input
          id="file-upload-input"
          type="file"
        />
        <label
          class="file-upload-value"
          for="file-upload-input"
        >
          Select resume	
        </label>
        <label
          class="file-upload-value-rules"
          for="file-upload-input"
        >
          File type: PDF, Max size: 5 MB
        </label>
      </div>
      <label
        class="file-upload-error"
      >
        Enter valid 
        file-upload-label
      </label>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`File upload Props Test If file upload field rendered correctly with file value 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="file-upload"
      >
        <label
          class="file-upload-label"
        >
          file-upload-label
        </label>
        <div
          class="file-upload-field"
        >
          <input
            id="file-upload-input"
            type="file"
          />
          <label
            class="file-upload-value"
            for="file-upload-input"
          >
            foo.txt
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="file-upload"
    >
      <label
        class="file-upload-label"
      >
        file-upload-label
      </label>
      <div
        class="file-upload-field"
      >
        <input
          id="file-upload-input"
          type="file"
        />
        <label
          class="file-upload-value"
          for="file-upload-input"
        >
          foo.txt
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`File upload Props Test If file upload field rendered correctly with value 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="file-upload"
      >
        <label
          class="file-upload-label"
        >
          file-upload-label
        </label>
        <div
          class="file-upload-field"
        >
          <input
            id="file-upload-input"
            type="file"
          />
          <label
            class="file-upload-value"
            for="file-upload-input"
          >
            file-upload-value
          </label>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="file-upload"
    >
      <label
        class="file-upload-label"
      >
        file-upload-label
      </label>
      <div
        class="file-upload-field"
      >
        <input
          id="file-upload-input"
          type="file"
        />
        <label
          class="file-upload-value"
          for="file-upload-input"
        >
          file-upload-value
        </label>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
